🐛 Fixed cookie consent popup width on mobile

--- a/css/cookies-consent.css
+++ b/css/cookies-consent.css
@@ -14,6 +14,7 @@
     margin: 0 auto;
     margin-top: 20vh;
     width: 50vw;
+    min-width: 250px;
     max-width: 450px;
     background-color: lightgray;
     color: black;
